# zicc

./: Cargo.toml
assembler/: Cargo.toml  build.rs
assembler-macro/: Cargo.toml
assembler/assembler/: Cargo.toml
assembler/assembler/src/: lib.rs
assembler/examples/: assemble.rs  folding.rs  lex.rs  parse.rs  tokenize.rs
assembler/keyword_expand/: Cargo.toml
assembler/keyword_expand/src/: expand_string.rs  expand_token_stream.rs  lib.rs
assembler/keyword_expand_macro/: Cargo.toml
assembler/keyword_expand_macro/src/: lib.rs
assembler/lex_from_rust/: Cargo.toml
assembler/lex_from_rust/src/: lib.rs
assembler/lex_from_rust/tests/: sources.rs
assembler/lexer/: Cargo.toml
assembler/lexer/src/: lib.rs
assembler/parse_from_rust/: Cargo.toml  Cargo.toml.disable
assembler/parse_from_rust/src/: lib.rs
assembler/parse_from_rust/tests/: ica.rs  sources.rs
assembler/parser/: Cargo.toml  build.rs
assembler/parser/src/: ast.rs  grammar.lalrpop  lib.rs
assembler/parser/src/ast/: expression.rs  mod.rs  params.rs  statements.rs
assembler/parser/src/ast/ast_nodes/: expression.rs  mod.rs  params.rs  statements.rs
assembler/parser/src/ast/unparse/: expression.rs  mod.rs  params.rs  statements.rs
assembler/src/: assemble.rs  ast.rs  grammar.lalrpop  lexer.rs  lib.rs  tokens.rs
assembler/src/lexer/: mod.rs  span.rs  token.rs  tokens.rs
assembler/src/parser/: ast.rs  mod.rs
assembler/test_sources/: Cargo.toml  build.rs  cat.ints  fibo.ints  hello_world.ints
assembler/test_sources/sources/: add.ica  add.ints  bf.ica  cat.ica  factorial.ica  factorial.ints  fibo.ica  fibo.ints  fibo_with_calls.ica  fibo_with_calls.ints  hello_world.ica  hello_world.ints  movm.ints  qsort.ica  reverse.ica  reverse.ints
assembler/test_sources/src/: lib.rs
compiler/: Cargo.toml
compiler-macros/: Cargo.toml
compiler/ast/: Cargo.toml
compiler/ast/src/: expression.rs  lib.rs  parser.rs  statements.rs  tokens.rs  typedef.rs
compiler/ast/test_sources/: basic_types.zicc
compiler/display_context/: Cargo.toml
compiler/display_context/src/: lib.rs
compiler/examples/: parser.rs
compiler/parse_and_emit/: Cargo.toml
compiler/parse_and_emit/src/: main.rs
compiler/spans/: Cargo.toml
compiler/spans/src/: lib.rs
compiler/src/: lib.rs
compiler/src/ast/: mod.rs  tokens.rs  typedef.rs
compiler/src/types/: mod.rs  transmute.rs  type_table_generation.rs
compiler/types/: Cargo.toml
compiler/types/src/: lib.rs  type_table_generation.rs
compiler/types/src/type_table_generation/: deduplication.rs  discover.rs  mod.rs  size_calculation.rs
compiler/types/src/type_table_generation/name_resolution/: mod.rs
errors/: Cargo.toml
errors/src/: lib.rs
src/: icfile.rs  icprogram.rs  icvalue.rs  identifier.rs  intcode.rs  lib.rs  machine.rs
src/assembler/: SYNTAX.md  assembly_file.rs  directive.rs  grammar.pest  instruction.rs  label.rs  mod.rs  parser.rs  relocatable.rs
src/assembler/tests/: mod.rs  sources.yaml
src/assembler/tests/sources/: add.yaml  brainfuck.yaml  calling.yaml  cat.yaml  data.yaml  data_2.yaml  data_with_self_references.yaml  factorial.yaml  halt.yaml  hello.yaml  in_out.yaml  incb.yaml  invert.yaml  jmp.yaml  jnz.yaml  jz.yaml  load.yaml  loadcmp.yaml  loadm.yaml  loadm_equiv.yaml  mov.yaml  mov2.yaml  movm.yaml  mul.yaml  offsets.yaml  out.yaml  pop_equiv.yaml  push_equiv.yaml  seq.yaml  slt.yaml  store.yaml  storem.yaml  storem_equiv.yaml  zeros.yaml
src/compiler/: ast.rs  defs.rs  expression.rs  mod.rs  operators.rs  typedef.rs  types.rs
test/: test.ints
utils/: Cargo.toml
utils/src/: collect_oks_or_errs.rs  lib.rs
vm/: Cargo.toml
vm/src/: lib.rs
zicc/: Cargo.toml
zicc/src/: guess.rs  lib.rs  main.rs  path_or_dash.rs
