[workspace]
members = [
    "assembler/lexer",
    "assembler/parser",
    "assembler/assembler",
    "assembler/parse_from_rust",
    "assembler/test_sources",
    "assembler/keyword_expand",
    "assembler/keyword_expand_macro",
    "compiler/ast",
    "compiler/types",
    "vm",
    "zicc",
    "errors",
    "utils", "compiler/spans", "compiler/display_context",
]
resolver = "2"
