[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
itertools = "0.11.0"
string-interner = "0.14.0"
thiserror = "1.0.40"
vm = { path = "../vm" }
errors = { path = "../errors" }
either = "1.9.0"
lazy_static = "1.4.0"

[dev-dependencies]
codespan-reporting = "0.11.1"
rustyline = "12.0.0"
strum = { version = "0.25.0", features = ["derive"] }
