[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
itertools = "0.11.0"
thiserror = "1.0.40"
vm = { path = "../vm" }
errors = { path = "../errors" }
either = "1.9.0"
logos = "0.13.0"
lalrpop-util = { version = "0.20.0", features = ["unicode"] }
map_in_place = "0.1.0"
proc-macro2 = "1.0.69"
syn = "2.0.38"

[dev-dependencies]
codespan-reporting = "0.11.1"
rustyline = "12.0.0"
strum = { version = "0.25.0", features = ["derive"] }

[build-dependencies]
lalrpop = "0.20.0"
