[package]
name = "compiler"
version = "0.1.0"
edition = "2021"


[dependencies]
either = "1.9.0"
itertools = "0.11.0"
nonmax = "0.5.3"
not_empty = "0.1.3"
paste = "1.0.14"
string-interner = "0.14.0"
thiserror = "1.0.50"
vm = { path = "../vm" }
errors = {path = "../errors"}
nonempty = "0.8.1"
slotmap = "1.0.7"
