[package]
name = "zicc"
version = "0.1.0"
edition = "2021"


[dependencies]
assembler = { path = "../assembler/assembler" }
vm = { path = "../vm" }
errors = { path = "../errors" }
clap = { version = "4.4.7", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
anyhow = "1.0.75"
uncased = "0.9.9"
bincode = { version = "2.0.0-rc.3" }
itertools = "0.11.0"
lazy-regex = "3.0.2"
utf8-chars = "3.0.1"