[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
errors = { version = "0.1.0", path = "../../errors" }
itertools = "0.11.0"
lexer = { version = "0.1.0", path = "../lexer" }
parser = { version = "0.1.0", path = "../parser" }
thiserror = "1.0.49"
vm = { version = "0.1.0", path = "../../vm" }


[dev-dependencies]
test_sources = { version = "0.1.0", path = "../test_sources" }
