[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
errors = { path = "../../errors" }
itertools = "0.11.0"
lexer = { path = "../lexer" }
parser = { path = "../parser" }
thiserror = "1.0.49"
vm = { path = "../../vm" }
# parse_from_rust = { path = "../parse_from_rust" }


[dev-dependencies]
test_sources = { path = "../test_sources" }
