[package]
name = "assembler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../../errors" }
itertools = "0.11.0"
lexer = { path = "../lexer" }
parser = { path = "../parser", features = ["parse"] }
thiserror = "1.0.49"
vm = { path = "../../vm" }
parse_from_rust = { path = "../parse_from_rust" }
serde = { version = "1.0.190", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
utils = { path = "../../utils" }


[dev-dependencies]
test_sources = { path = "../test_sources" }
serde_json = "1.0.107"
