[package]
name = "lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { version = "0.1.0", path = "../../errors" }
itertools = "0.11.0"
logos = "0.13.0"
thiserror = "1.0.49"
vm = { version = "0.1.0", path = "../../vm" }

[dev-dependencies]
test_sources = { version = "0.1.0", path = "../test_sources" }
