[package]
name = "lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
errors = { path = "../../errors" }
itertools = "0.11.0"
keyword_expand_macro = { path = "../keyword_expand_macro" }
logos = "0.13.0"
thiserror = "1.0.49"
vm = { path = "../../vm" }

[dev-dependencies]
test_sources = { path = "../test_sources" }
