[package]
name = "lexer"
version = "0.1.0"
edition = "2021"

[dependencies]
errors = { path = "../../errors" }
itertools = "0.11.0"
keyword_expand_macro = { path = "../keyword_expand_macro" }
logos = "0.13.0"
thiserror = "1.0.49"
vm = { path = "../../vm" }
serde = { version = "1.0.190", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["derive"] }

[dev-dependencies]
test_sources = { path = "../test_sources" }
