[package]
name = "parse_from_rust"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
parser = { path = "../parser" }
keyword_expand_macro = { path = "../keyword_expand_macro" }
syn = "2.0.38"
itertools = "0.11.0"
either = "1.9.0"

[dev-dependencies]
test_sources = { path = "../test_sources" }
