[package]
name = "parse_from_rust"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
parser = { path = "../parser" }
lexer = { path = "../lexer" }
keyword_expand_macro = { path = "../keyword_expand_macro" }
syn = { version = "2.0.38", features = ["full"] }
itertools = "0.11.0"
either = "1.9.0"
uncased = "0.9.9"

[dev-dependencies]
test_sources = { path = "../test_sources" }
lexer = { path = "../lexer" }
