[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
either = "1.9.0"
errors = { path = "../../errors" }
itertools = "0.11.0"
lalrpop-util = { version = "0.20.0", features = ["unicode"] }
lexer = { path = "../lexer" }
map_in_place = "0.1.0"
thiserror = "1.0.49"
vm = { path = "../../vm" }

[dev-dependencies]
test_sources = { path = "../test_sources" }

[build-dependencies]
cargo-emit = "0.2.1"
keyword_expand = { path = "../keyword_expand" }
lalrpop = { version = "0.20.0", features = ["unicode"] }
proc-macro2 = "1.0.69"
lazy-regex = "3.0.2"
serde_json = "1.0.107"
