[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[features]
parse = [
    "dep:lalrpop-util",
    "dep:lalrpop",
    "dep:cargo-emit",
    "dep:lazy-regex",
    "dep:serde_json",
    "dep:keyword_expand",
]

[dependencies]
arrayvec = "0.7.4"
errors = { path = "../../errors" }
itertools = "0.11.0"
lalrpop-util = { version = "0.20.0", features = ["unicode"], optional = true }
lexer = { path = "../lexer" }
map_in_place = "0.1.0"
thiserror = "1.0.49"
serde = { version = "1.0.190", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
vm = { path = "../../vm" }
utils = { path = "../../utils" }

[dev-dependencies]
test_sources = { path = "../test_sources" }
serde_json = "1.0.107"

[build-dependencies]
cargo-emit = { version = "0.2.1", optional = true }
keyword_expand = { path = "../keyword_expand", optional = true }
lalrpop = { version = "0.20.0", features = ["unicode"], optional = true }
lazy-regex = { version = "3.0.2", optional = true }
serde_json = { version = "1.0.107", optional = true }
