[package]
name = "ast"
version = "0.1.0"
edition = "2021"


[dependencies]
display_context = { path = "../display_context" }
either = "1.11.0"
errors = { path = "../../errors" }
logos = "0.14.0"
paste = "1.0.15"
peg = "0.8.3"
spans = { path = "../spans" }
string-interner = "0.17.0"
thiserror = "1.0.60"
vm = { path = "../../vm" }
