[package]
name = "types"
version = "0.1.0"
edition = "2021"


[dependencies]
ast = { path = "../ast" }
display_context = { path = "../display_context" }
either = "1.11.0"
elsa = { version = "1.10.0" }
indenter = "0.3.3"
itertools = "0.12.1"
slotmap = "1.0.7"
stable_deref_trait = "1.2.0"
thiserror = "1.0.60"
vm = { path = "../../vm" }
